# xfce4-notifyd

./: .clang-format  .gitignore  .gitlab-ci.yml  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml  xfce-revision.h.in
.gitlab/issue_templates/: default.md
common/: Makefile.am  meson.build  xfce-notify-common.c  xfce-notify-common.h  xfce-notify-log-dbus.xml  xfce-notify-log-types.c  xfce-notify-log-types.h  xfce-notify-log-util.c  xfce-notify-log-util.h  xfce-notify-log.c  xfce-notify-log.h
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
icons/scalable/: Makefile.am
icons/symbolic/: Makefile.am
panel-plugin/: Makefile.am  meson.build  notification-plugin-dialogs.c  notification-plugin-dialogs.h  notification-plugin-log.c  notification-plugin-log.h  notification-plugin-settings-ui.gresource.xml  notification-plugin-settings.glade  notification-plugin.c  notification-plugin.desktop.in  notification-plugin.h
po/: ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  (+23 more)
tests/: Makefile.am  dummy-notification.sh  meson.build  test-actions.c  test-icons.c  test-logging.sh  test-positioning.c  test-suppress-duplicates.sh  test-text.c
themes/: Makefile.am  meson.build
themes/Default/: Makefile.am
themes/Smoke/: gtk.css  gtkrc
themes/Smoke/xfce-notify-4.0/: Makefile.am  gtkrc
themes/ZOMG-PONIES!/: Makefile.am  gtk.css
themes/ZOMG-PONIES!/xfce-notify-4.0/: Makefile.am  gtkrc
themes/gtk-3.0/Bright/: gtk.css
themes/gtk-3.0/Default/: gtk.css
themes/gtk-3.0/Retro/: gtk.css
themes/gtk-3.0/Smoke/: gtk.css
themes/gtk-3.0/ZOMG-PONIES!/: gtk.css
themes/gtk-3.20/Bright/: gtk.css
themes/gtk-3.20/Default/: gtk.css
themes/gtk-3.20/Retro/: gtk.css
themes/gtk-3.20/Smoke/: gtk.css
themes/gtk-3.20/XP Balloon/: gtk.css
themes/gtk-3.20/XP-Balloon/: gtk.css
themes/gtk-3.20/ZOMG-PONIES!/: gtk.css
xfce4-notifyd/: Makefile.am  galago-dbus.xml  main.c  meson.build  notify-dbus.xml  org.freedesktop.Notifications.service.in  org.xfce.xfce4-notifyd.Notifications.service.in  org.xfce.xfce4-notifyd.Notifyd.service.in  xfce-notification.c  xfce-notification.h  xfce-notify-daemon-log.c  xfce-notify-daemon-log.h  xfce-notify-daemon.c  xfce-notify-daemon.h  xfce-notify-dbus.xml  xfce-notify-fdo-dbus.xml  xfce-notify-log.c  xfce-notify-log.h  xfce-notify-types.c  xfce-notify-types.h  xfce-notify-window.c  xfce-notify-window.h  xfce4-notifyd.desktop.in  xfce4-notifyd.desktop.in.in  xfce4-notifyd.service.in
xfce4-notifyd-config/: Makefile.am  main.c  meson.build  xfce-notify-config-ui.gresource.xml  xfce-notify-log-viewer.c  xfce-notify-log-viewer.h  xfce4-notifyd-config-known-app.glade  xfce4-notifyd-config.1  xfce4-notifyd-config.desktop.in  xfce4-notifyd-config.glade
