SUBDIRS = \
	po

dist_autogen = autogen.sh
dist_misc = TODO
dist_intltool = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

distclean_intltool = \
	intltool-extract \
	intltool-merge \
	intltool-update

xfce4_notifyddir = $(HELPER_PATH_PREFIX)/xfce4/notifyd
xfce4_notifyd_PROGRAMS = xfce4-notifyd/xfce4-notifyd
bin_PROGRAMS = xfce4-notifyd-config/xfce4-notifyd-config

xfce4_notifyd_xfce4_notifyd_SOURCES = \
	xfce4-notifyd/main.c \
	xfce4-notifyd/notify-dbus.h \
	xfce4-notifyd/xfce-notify-daemon.c \
	xfce4-notifyd/xfce-notify-daemon.h \
	xfce4-notifyd/xfce-notify-enum-types.c \
	xfce4-notifyd/xfce-notify-enum-types.h \
	xfce4-notifyd/xfce-notify-marshal.c \
	xfce4-notifyd/xfce-notify-marshal.h \
	xfce4-notifyd/xfce-notify-window.c \
	xfce4-notifyd/xfce-notify-window.h

xfce4_notifyd_config_xfce4_notifyd_config_SOURCES = \
	xfce4-notifyd-config/main.c \
	xfce4-notifyd-config/xfce4-notifyd-config.ui.h

common_cflags = \
	-DLOCALEDIR=\"$(localedir)\" \
	$(GTK_CFLAGS) \
	$(LIBXFCE4UTIL_CFLAGS) \
	$(LIBXFCE4UI_CFLAGS) \
	$(DBUS_GLIB_CFLAGS) \
	$(XFCONF_CFLAGS)

xfce4_notifyd_xfce4_notifyd_CFLAGS = \
	-DG_LOG_DOMAIN=\"xfce4-notifyd\" \
	$(common_cflags) \
	$(LIBX11_CFLAGS)

xfce4_notifyd_config_xfce4_notifyd_config_CFLAGS = \
	-DG_LOG_DOMAIN=\"xfce4-notifyd-config\" \
	$(common_cflags)

common_ldadd = \
	$(GTK_LIBS) \
	$(LIBXFCE4UTIL_LIBS) \
	$(LIBXFCE4UI_LIBS) \
	$(DBUS_GLIB_LIBS) \
	$(XFCONF_LIBS)

xfce4_notifyd_xfce4_notifyd_LDADD = \
	$(common_ldadd) \
	$(LIBX11_LIBS)

xfce4_notifyd_config_xfce4_notifyd_config_LDADD = \
	$(common_ldadd)


servicedir = $(datadir)/dbus-1/services
service_in_files = xfce4-notifyd/org.xfce.xfce4-notifyd.Notifications.service.in
service_DATA = $(service_in_files:.service.in=.service)

dist_service = \
	$(service_in_files) \
	xfce4-notifyd/notify-dbus.xml \
	xfce4-notifyd/xfce-notify-marshal.list
distclean_service = $(service_DATA)

dist_man1_MANS = \
	xfce4-notifyd-config/xfce4-notifyd-config.1

desktopdir = $(datadir)/applications
desktop_in_files = xfce4-notifyd-config/xfce4-notifyd-config.desktop.in
desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
@INTLTOOL_DESKTOP_RULE@

icon_dir = $(datadir)/icons/hicolor
gtk_update_icon_cache = gtk-update-icon-cache -f -t $(icon_dir)

icons48dir = $(icon_dir)/48x48/apps
dist_icons48_DATA = icons/48x48/xfce4-notifyd.png

theme_dir = $(datadir)/themes

defaultthemedir = $(theme_dir)/Default/xfce-notify-4.0
dist_defaulttheme_DATA = themes/Default/gtkrc

smokethemedir = $(theme_dir)/Smoke/xfce-notify-4.0
dist_smoketheme_DATA = themes/Smoke/gtkrc

zomgponiesthemedir = $(theme_dir)/ZOMG-PONIES!/xfce-notify-4.0
dist_zomgponiestheme_DATA = themes/ZOMG-PONIES!/gtkrc

built_xfce4_notifyd = \
	xfce4-notifyd/notify-dbus.h

clean_xfce4_notifyd = \
	$(built_xfce4_notifyd)

if MAINTAINER_MODE

built_xfce4_notifyd += \
	xfce4-notifyd/xfce-notify-marshal.c \
	xfce4-notifyd/xfce-notify-marshal.h \
	xfce4-notifyd/xfce-notify-enum-types.c \
	xfce4-notifyd/xfce-notify-enum-types.h

built_xfce4_notifyd_config = \
	xfce4-notifyd-config/xfce4-notifyd-config.ui.h

clean_xfce4_notifyd += \
	xfce4-notifyd/stamp-xfce-notify-enum-types.h \
	xfce4-notifyd/stamp-xfce-notify-marshal.h

endif

clean_xfce4_notifyd_config = \
	$(built_xfce4_notifyd_config) \
	$(desktop_DATA)

dist_xfce4_notifyd_config = \
	xfce4-notifyd-config/xfce4-notifyd-config.glade \
	$(desktop_in_files)

dist_noinst_DATA = \
	$(dist_misc) \
	$(dist_intltool) \
	$(dist_service) \
	$(dist_xfce4_notifyd_config)

dist_noinst_SCRIPTS = \
	$(dist_autogen)

BUILT_SOURCES = \
	$(built_xfce4_notifyd) \
	$(built_xfce4_notifyd_config)

CLEANFILES = \
	$(clean_xfce4_notifyd) \
	$(clean_xfce4_notifyd_config)

DISTCLEANFILES = \
	$(distclean_intltool) \
	$(distclean_service)

xfce4-notifyd/notify-dbus.h: $(srcdir)/xfce4-notifyd/notify-dbus.xml Makefile
if USE_OLD_GET_SERVER_INFORMATION_SIGNATURE
	sed -e 's,<arg direction="out" name="spec_version" type="s"/>,,' $< > $(<F).tmp
	$(DBUS_BINDING_TOOL) --mode=glib-server --prefix=notify $(<F).tmp > $@
	rm -f $(<F).tmp
else
	$(DBUS_BINDING_TOOL) --mode=glib-server --prefix=notify $< > $@
endif

if MAINTAINER_MODE

xfce4-notifyd/xfce-notify-marshal.h: xfce4-notifyd/stamp-xfce-notify-marshal.h
	@true
xfce4-notifyd/stamp-xfce-notify-marshal.h: $(srcdir)/xfce4-notifyd/xfce-notify-marshal.list Makefile
	@echo '/* this file is autogenerated -- do not edit */' >xfce4-notifyd/xfce-notify-marshal.h
	@echo >>xfce4-notifyd/xfce-notify-marshal.h
	glib-genmarshal --prefix=xfce_notify_marshal xfce4-notifyd/xfce-notify-marshal.list --header >xfce4-notifyd/xfce-notify-marshal.h
	echo timestamp >$@
xfce4-notifyd/xfce-notify-marshal.c: $(srcdir)/xfce4-notifyd/xfce-notify-marshal.list Makefile
	@echo '/* this file is autogenerated -- do not edit */' >$@
	@echo >>$@
	@echo '#include "xfce-notify-marshal.h"' >$@
	@echo >>$@
	glib-genmarshal --prefix=xfce_notify_marshal xfce4-notifyd/xfce-notify-marshal.list --body >>$@

xfce4-notifyd/xfce-notify-enum-types.h: xfce4-notifyd/stamp-xfce-notify-enum-types.h
	@true
xfce4-notifyd/stamp-xfce-notify-enum-types.h: xfce4-notifyd/xfce-notify-window.h Makefile
	( cd $(srcdir) && glib-mkenums \
	        --fhead "#ifndef __XFCE_NOTIFY_ENUM_TYPES_H__\n#define __XFCE_NOTIFY_ENUM_TYPES_H__\n#include <glib-object.h>\nG_BEGIN_DECLS\n" \
	        --fprod "/* enumerations from \"@filename@\" */\n" \
	        --vhead "GType @enum_name@_get_type(void) G_GNUC_CONST;\n#define XFCE_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n" \
	        --ftail "G_END_DECLS\n\n#endif /* __XFCE_NOTIFY_ENUM_TYPES_H__ */" \
	        xfce4-notifyd/xfce-notify-window.h ) >> xfce4-notifyd/xgen-xneth \
	&& ( cmp -s xfce4-notifyd/xgen-xneth xfce4-notifyd/xfce-notify-enum-types.h || cp xfce4-notifyd/xgen-xneth xfce4-notifyd/xfce-notify-enum-types.h ) \
	&& rm -f xfce4-notifyd/xgen-xneth \
	&& echo timestamp >$@
xfce4-notifyd/xfce-notify-enum-types.c: xfce4-notifyd/xfce-notify-window.h Makefile
	( cd $(srcdir) && glib-mkenums \
	        --fhead "#include \"xfce-notify-enum-types.h\"\n#include \"xfce-notify-window.h\"\n" \
	        --fprod "\n/* enumerations from \"@filename@\" */" \
	        --vhead "GType\n@enum_name@_get_type(void)\n{\n\tstatic GType type = 0;\n\tif(type == 0) {\n\tstatic const G@Type@Value values[] = {"\
	        --vprod "\t{ @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
	        --vtail "\t{ 0, NULL, NULL }\n\t};\n\ttype = g_@type@_register_static(\"@EnumName@\", values);\n  }\n\treturn type;\n}\n" \
	        xfce4-notifyd/xfce-notify-window.h ) >> xfce4-notifyd/xgen-xnetc \
	&& cp xfce4-notifyd/xgen-xnetc xfce4-notifyd/xfce-notify-enum-types.c \
	&& rm -f xfce4-notifyd/xgen-xnetc

xfce4-notifyd-config/xfce4-notifyd-config.ui.h: $(srcdir)/xfce4-notifyd-config/xfce4-notifyd-config.glade
	$(EXO_CSOURCE) --static --name=xfce4_notifyd_config_ui $< >$@

endif

install-data-hook:
	@-if test -z "$(DESTDIR)"; then \
	    echo "Updating Gtk icon cache."; \
	    $(gtk_update_icon_cache); \
	else \
	    echo "*** Icon cache not updated.  Remember to run:"; \
	    echo "***"; \
	    echo "***   $(gtk_update_icon_cache)"; \
	    echo "***"; \
	fi

xfce4-notifyd/%.service: $(srcdir)/xfce4-notifyd/%.service.in Makefile
	sed -e "s,\@notifydir\@,$(xfce4_notifyddir),g" < $< > $@

distclean-local:
	-rm -rf *.cache *~

checksums: distcheck
	sha1sum $(PACKAGE)-$(VERSION).tar.bz2 > $(PACKAGE)-$(VERSION).tar.bz2.sha1.asc

gpg-sign: checksums
	gpg -b --armor $(PACKAGE)-$(VERSION).tar.bz2

release: gpg-sign
	-mkdir releases/
	mv $(PACKAGE)-$(VERSION).tar.bz2* releases/
	-rm $(PACKAGE)-$(VERSION).tar.gz

#Tests
if HAVE_LIBNOTIFY
noinst_PROGRAMS = \
	tests/test-text \
	tests/test-positioning \
	tests/test-actions

tests_cflags = \
	-I$(top_srcdir) \
	$(LIBNOTIFY_CFLAGS)

tests_ldadd = \
	$(LIBNOTIFY_LIBS)

tests_test_text_SOURCES = tests/test-text.c
tests_test_text_CFLAGS = $(tests_cflags)
tests_test_text_LDADD = $(tests_ldadd)

tests_test_positioning_SOURCES = tests/test-positioning.c
tests_test_positioning_CFLAGS = $(tests_cflags)
tests_test_positioning_LDADD = $(tests_ldadd)

tests_test_actions_SOURCES = tests/test-actions.c
tests_test_actions_CFLAGS = $(tests_cflags)
tests_test_actions_LDADD = $(tests_ldadd)
endif
